--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
   <h1>CHCP corp</h1>
-  <p>Toolmaker</p>
+  <p>Toolmaker web</p>
 
   <map></map>
   <!--<script src="http://webapi.amap.com/maps?v=1.3&key=98a2212b775a792a72c41d48ac64074a"></script>-->
