--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Toolmaker</title>
 </head>
 <body>
-<script src=<%= htmlWebpackPlugin.options.path %>jquery.min.js></script>
+<script src=<%= htmlWebpackPlugin.options.path %>jquery/jquery.min.js></script>
 <!-- script src=<%= htmlWebpackPlugin.options.path %>tinymce/tinymce.min.js></script-->
 <div id="app"></div>
 <!-- built files will be auto injected -->
